<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false" >

    <TextView
        android:id="@+id/card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_card_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/card_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_card_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="40sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/card_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/dummy_card_id"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="30sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/card_id_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/dummy_card_id"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="30sp"/>


    <ImageButton
        android:id="@+id/card_menu_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end|top"
        android:background="@null"
        android:contentDescription="@string/desc_edit_card"
        android:src="@android:drawable/ic_menu_edit" />

</androidx.cardview.widget.CardView>